crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@repos__getsentry-sentry__f96e0f2de81f9d5b95614393be420f3107604220__src__sentry__templatetags__sentry_admin_helpers.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/getsentry-sentry/f96e0f2de81f9d5b95614393be420f3107604220/src/sentry/templatetags/sentry_admin_helpers.py
---
tag_rules: {}
filter_arities:
  "src.sentry.templatetags.sentry_admin_helpers::with_event_counts":
    expects_arg: false
    arg_optional: false
block_specs: {}
