crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@repos__getsentry-sentry__f96e0f2de81f9d5b95614393be420f3107604220__src__sentry__templatetags__sentry_trace.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/getsentry-sentry/f96e0f2de81f9d5b95614393be420f3107604220/src/sentry/templatetags/sentry_trace.py
---
tag_rules:
  "src.sentry.templatetags.sentry_trace::get_sentry_baggage":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.sentry.templatetags.sentry_trace::get_sentry_trace":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
filter_arities: {}
block_specs: {}
